--- a/test/dummy/app/views/layouts/application.html.erb
+++ b/test/dummy/app/views/layouts/application.html.erb
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Dummy</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-
-    <%= stylesheet_link_tag "application" %>
-  </head>
-
-  <body>
-    <%= yield %>
-  </body>
+<head>
+  <title>Lookbook Dummy App</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <%= csrf_meta_tags %>
+  <%= csp_meta_tag %>
+</head>
+<body>
+  <%= yield %>
+</body>
 </html>
