--- a/test/demo/app/views/demo/index.html.erb
+++ b/test/demo/app/views/demo/index.html.erb
@@ -1,9 +1,11 @@
-<div class="container">
-  <h1 class="landing-title">Lookbook test app</h1>
+<div id="landing-content">
+  <div class="container">
+    <h1>Lookbook test app</h1>
 
-  <div>
-    <%= link_to lookbook.root_path, role: "button" do %>
-      Go to the Lookbook UI &rarr;
-    <% end %>
+    <div>
+      <%= link_to lookbook.root_path, role: "button" do %>
+        Go to the Lookbook UI &rarr;
+      <% end %>
+    </div>
   </div>
 </div>
