--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -81,6 +81,10 @@ router {
   display: contents;
 }
 
+[x-cloak] {
+  display: none !important;
+}
+
 sl-tooltip {
   &::part(body) {
     font-size: var(--sl-font-size-x-small);
