Fix source rerendering

--- a/app/views/lookbook/inspector/panels/_output.html.erb
+++ b/app/views/lookbook/inspector/panels/_output.html.erb
@@ -1,4 +1,4 @@
-<%= lookbook_inspector_panel(:code, id: dom_id(@target, :output_panel), lang: :html, key: @target.source_checksum) do %>
+<%= lookbook_inspector_panel(:code, id: dom_id(@target, :output_panel), lang: :html, key: @target.output_checksum) do %>
 <% @target.scenarios_with_output do |scenario, html| %>
 <% if @target.scenarios_with_output.many? %>
 <%= code_comment(:html, scenario.label) %>
