First pass at mailer preview support

--- a/test/demo/app/views/layouts/mailer.html.erb
+++ b/test/demo/app/views/layouts/mailer.html.erb
@@ -2,6 +2,11 @@
 <html>
 <head>
   <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
+  <style>
+    html {
+      background: #fff;
+    }
+  </style>
 </head>
 <body>
   <%= yield %>
