Params panel tweaks

--- a/test/demo/app/views/layouts/application.html.erb
+++ b/test/demo/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html data-theme="light">
 <head>
   <title>Lookbook Dummy App</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
