--- a/app/components/lookbook/ui/app/preview_inspector/params_panel/params_panel.css
+++ b/app/components/lookbook/ui/app/preview_inspector/params_panel/params_panel.css
@@ -1,3 +1,36 @@
 [data-component="panel"][data-panel="params"] {
   height: 100%;
+  background-color: var(--sl-color-neutral-50);
+  padding-top: var(--sl-spacing-medium);
+
+  .params-panel-table {
+    background: #fff;
+    border: 1px solid var(--sl-color-neutral-300);
+  }
+
+  table {
+    width: 100%;
+    border-collapse: collapse;
+  }
+
+  th,
+  td {
+    text-align: left;
+    padding-inline: var(--sl-spacing-medium);
+    padding-block: var(--sl-spacing-small);
+    width: 1%;
+
+    &.param-description {
+      width: auto;
+    }
+  }
+
+  thead tr,
+  tr:not(:last-child) {
+    border-bottom: 1px solid var(--sl-color-neutral-300);
+  }
+
+  code {
+    font-size: var(--sl-font-size-small);
+  }
 }
