--- a/app/components/lookbook/ui/app/preview_inspector/params_panel/params_panel.html.erb
+++ b/app/components/lookbook/ui/app/preview_inspector/params_panel/params_panel.html.erb
@@ -1,30 +1,34 @@
 <%= lookbook_panel(**args, x: {data: "paramsPanel"}, data: {panel: "params"}) do %>
   <% if editables.any? %>
-    <table>
-      <thead>
-        <th>Name</th>
-        <th>Param</th>
-        <th>Info</th>
-        <th>Edit</th>
-      </thead>
-      <tbody>
-        <% editables.each do |editable| %>
-        <tr @keydown.stop>
-          <td>
-            <%= editable[:param].label %>  
-          </td>
-          <td>
-            <%= editable[:param].name %>  
-          </td>
-          <td>
-            <%= editable[:param].description %>  
-          </td>
-          <td>
-            <%= lookbook_param_editor(editable[:param], value: editable[:value]) %>
-          </td>
-        </tr>
-      <% end %>
-      </tbody>
-    </table>
+    <div class="params-panel-table">
+      <table>
+        <thead>
+          <tr>
+            <th class="param-label">Name</th>
+            <th class="param-name">Param</th>
+            <th class="param-description">Info</th>
+            <th class="param-editor">Edit</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% editables.each do |editable| %>
+          <tr @keydown.stop>
+            <td class="param-label">
+              <%= editable[:param].label %>
+            </td>
+            <td class="param-name">
+              <code><%= editable[:param].name %></code>
+            </td>
+            <td class="param-description">
+              <%= editable[:param].description || raw("&mdash;") %>  
+            </td>
+            <td class="param-editor">
+              <%= lookbook_param_editor(editable[:param], value: editable[:value]) %>
+            </td>
+          </tr>
+        <% end %>
+        </tbody>
+      </table>
+    </div>
   <% end %>  
 <% end %>
