--- a/public/lookbook-assets/app.css
+++ b/public/lookbook-assets/app.css
@@ -923,7 +923,51 @@ sl-tooltip::part(body) {
 
 [data-component="panel"][data-panel="params"] {
   height: 100%;
+  background-color: hsl(0, 0%, 98%);
+  background-color: var(--sl-color-neutral-50);
+  padding-top: 1rem;
+  padding-top: var(--sl-spacing-medium);
 }
+
+[data-component="panel"][data-panel="params"] .params-panel-table {
+    background: #fff;
+    border: 1px solid hsl(240, 5%, 84%);
+    border: 1px solid var(--sl-color-neutral-300);
+  }
+
+[data-component="panel"][data-panel="params"] table {
+    width: 100%;
+    border-collapse: collapse;
+  }
+
+[data-component="panel"][data-panel="params"] th,
+  [data-component="panel"][data-panel="params"] td {
+    text-align: left;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    padding-left: var(--sl-spacing-medium);
+    padding-right: var(--sl-spacing-medium);
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+    padding-top: var(--sl-spacing-small);
+    padding-bottom: var(--sl-spacing-small);
+    width: 1%;
+  }
+
+[data-component="panel"][data-panel="params"] th.param-description, [data-component="panel"][data-panel="params"] td.param-description {
+      width: auto;
+    }
+
+[data-component="panel"][data-panel="params"] thead tr,
+  [data-component="panel"][data-panel="params"] tr:not(:last-child) {
+    border-bottom: 1px solid hsl(240, 5%, 84%);
+    border-bottom: 1px solid var(--sl-color-neutral-300);
+  }
+
+[data-component="panel"][data-panel="params"] code {
+    font-size: 0.875rem;
+    font-size: var(--sl-font-size-small);
+  }
 
 [data-component="preview-inspector"] {
   height: 100%;
