--- a/app/components/lookbook/ui/app/preview_inspector/params_panel/params_panel.css
+++ b/app/components/lookbook/ui/app/preview_inspector/params_panel/params_panel.css
@@ -23,6 +23,11 @@
     &.param-description {
       width: auto;
     }
+
+    &.param-editor {
+      width: 25%;
+      max-width: 400px;
+    }
   }
 
   thead tr,
