--- a/test/demo/app/views/layouts/preview.html.erb
+++ b/test/demo/app/views/layouts/preview.html.erb
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html data-theme="light">
 <head>
-  <title>Lookbook Demo App</title>
+  <title>Lookbook Demo App | Preview</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="color-scheme" content="light dark">
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
   <%= stylesheet_link_tag "pico.css" %>
-  <%= stylesheet_link_tag "demo.css" %>
 </head>
 <body>
   <%= yield %>
