--- a/test/demo/app/views/layouts/preview.html.erb
+++ b/test/demo/app/views/layouts/preview.html.erb
@@ -7,6 +7,11 @@
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
   <%= stylesheet_link_tag "pico.css" %>
+  <style>
+    body {
+      padding: 1rem;
+    }
+  </style>
 </head>
 <body>
   <%= yield %>
