--- a/app/components/lookbook/ui/app/nav_tree/nav_tree_item/nav_tree_item.html.erb
+++ b/app/components/lookbook/ui/app/nav_tree/nav_tree_item/nav_tree_item.html.erb
@@ -11,6 +11,6 @@
   <sl-icon name="<%= icon %>"></sl-icon>
   <%= label %>
   <% children&.each do |node| %>
-    <%= lookbook_nav_tree_item(node) %>
+    <%= render Lookbook::UI::NavTreeItem.new(node: node) %>
   <% end %>
 <% end %>
