--- a/assets/entrypoints/app.css
+++ b/assets/entrypoints/app.css
@@ -1,5 +1,8 @@
 @import "@shoelace-style/shoelace/dist/themes/light.css";
-@import "../css/tokens.css";
+@import "../css/colors.css";
+@import "../css/theme.css";
+@import "../css/reset.css";
 @import "../css/base.css";
+@import "../css/forms.css";
 
 @import-glob "../../app/components/lookbook/ui/**/*.css";
