--- a/assets/entrypoints/mailer.css
+++ b/assets/entrypoints/mailer.css
@@ -1,5 +1,7 @@
 @import "@shoelace-style/shoelace/dist/themes/light.css";
-@import "../css/tokens.css";
+@import "../css/colors.css";
+@import "../css/theme.css";
+@import "../css/reset.css";
 @import "../css/base.css";
 
 html,
