--- a/public/lookbook-assets/mailer.css
+++ b/public/lookbook-assets/mailer.css
@@ -486,6 +486,258 @@
 }
 
 :root {
+  --lookbook-color-gray-50: hsl(0, 0%, 98%);
+  --lookbook-color-gray-100: hsl(240, 5%, 96%);
+  --lookbook-color-gray-200: hsl(240, 6%, 90%);
+  --lookbook-color-gray-300: hsl(240, 5%, 84%);
+  --lookbook-color-gray-400: hsl(240, 5%, 65%);
+  --lookbook-color-gray-500: hsl(240, 4%, 46%);
+  --lookbook-color-gray-600: hsl(240, 5%, 34%);
+  --lookbook-color-gray-700: hsl(240, 5%, 26%);
+  --lookbook-color-gray-800: hsl(240, 4%, 16%);
+  --lookbook-color-gray-900: hsl(240, 6%, 10%);
+  --lookbook-color-gray-950: hsl(240, 7%, 8%);
+
+  --lookbook-color-red-50: hsl(0, 86%, 97%);
+  --lookbook-color-red-100: hsl(0, 93%, 94%);
+  --lookbook-color-red-200: hsl(0, 96%, 89%);
+  --lookbook-color-red-300: hsl(0, 94%, 82%);
+  --lookbook-color-red-400: hsl(0, 91%, 71%);
+  --lookbook-color-red-500: hsl(0, 84%, 60%);
+  --lookbook-color-red-600: hsl(0, 72%, 51%);
+  --lookbook-color-red-700: hsl(0, 74%, 42%);
+  --lookbook-color-red-800: hsl(0, 70%, 35%);
+  --lookbook-color-red-900: hsl(0, 63%, 31%);
+  --lookbook-color-red-950: hsl(0, 60%, 20%);
+
+  --lookbook-color-orange-50: hsl(33, 100%, 97%);
+  --lookbook-color-orange-100: hsl(34, 100%, 92%);
+  --lookbook-color-orange-200: hsl(32, 98%, 83%);
+  --lookbook-color-orange-300: hsl(31, 97%, 72%);
+  --lookbook-color-orange-400: hsl(27, 96%, 61%);
+  --lookbook-color-orange-500: hsl(25, 95%, 53%);
+  --lookbook-color-orange-600: hsl(21, 90%, 48%);
+  --lookbook-color-orange-700: hsl(18, 88%, 40%);
+  --lookbook-color-orange-800: hsl(15, 79%, 34%);
+  --lookbook-color-orange-900: hsl(15, 75%, 28%);
+  --lookbook-color-orange-950: hsl(15, 69%, 19%);
+
+  --lookbook-color-amber-50: hsl(48, 100%, 96%);
+  --lookbook-color-amber-100: hsl(48, 97%, 89%);
+  --lookbook-color-amber-200: hsl(48, 97%, 77%);
+  --lookbook-color-amber-300: hsl(46, 97%, 65%);
+  --lookbook-color-amber-400: hsl(43, 96%, 56%);
+  --lookbook-color-amber-500: hsl(38, 92%, 50%);
+  --lookbook-color-amber-600: hsl(32, 95%, 44%);
+  --lookbook-color-amber-700: hsl(26, 91%, 37%);
+  --lookbook-color-amber-800: hsl(23, 83%, 31%);
+  --lookbook-color-amber-900: hsl(22, 78%, 27%);
+  --lookbook-color-amber-950: hsl(23, 74%, 17%);
+
+  --lookbook-color-yellow-50: hsl(55, 92%, 95%);
+  --lookbook-color-yellow-100: hsl(55, 97%, 88%);
+  --lookbook-color-yellow-200: hsl(53, 98%, 77%);
+  --lookbook-color-yellow-300: hsl(50, 98%, 64%);
+  --lookbook-color-yellow-400: hsl(48, 96%, 53%);
+  --lookbook-color-yellow-500: hsl(45, 93%, 48%);
+  --lookbook-color-yellow-600: hsl(41, 96%, 40%);
+  --lookbook-color-yellow-700: hsl(36, 92%, 33%);
+  --lookbook-color-yellow-800: hsl(32, 81%, 29%);
+  --lookbook-color-yellow-900: hsl(28, 73%, 26%);
+  --lookbook-color-yellow-950: hsl(33, 69%, 14%);
+
+  --lookbook-color-lime-50: hsl(78, 92%, 95%);
+  --lookbook-color-lime-100: hsl(80, 89%, 89%);
+  --lookbook-color-lime-200: hsl(81, 89%, 80%);
+  --lookbook-color-lime-300: hsl(82, 85%, 67%);
+  --lookbook-color-lime-400: hsl(83, 78%, 56%);
+  --lookbook-color-lime-500: hsl(84, 81%, 44%);
+  --lookbook-color-lime-600: hsl(85, 85%, 35%);
+  --lookbook-color-lime-700: hsl(86, 78%, 27%);
+  --lookbook-color-lime-800: hsl(86, 69%, 23%);
+  --lookbook-color-lime-900: hsl(88, 61%, 20%);
+  --lookbook-color-lime-950: hsl(87, 61%, 14%);
+
+  --lookbook-color-green-50: hsl(139, 77%, 97%);
+  --lookbook-color-green-100: hsl(141, 84%, 93%);
+  --lookbook-color-green-200: hsl(141, 79%, 85%);
+  --lookbook-color-green-300: hsl(142, 77%, 73%);
+  --lookbook-color-green-400: hsl(142, 69%, 58%);
+  --lookbook-color-green-500: hsl(142, 71%, 45%);
+  --lookbook-color-green-600: hsl(142, 76%, 36%);
+  --lookbook-color-green-700: hsl(142, 72%, 29%);
+  --lookbook-color-green-800: hsl(143, 64%, 24%);
+  --lookbook-color-green-900: hsl(144, 61%, 20%);
+  --lookbook-color-green-950: hsl(144, 61%, 12%);
+
+  --lookbook-color-emerald-50: hsl(152, 81%, 96%);
+  --lookbook-color-emerald-100: hsl(149, 80%, 90%);
+  --lookbook-color-emerald-200: hsl(152, 76%, 80%);
+  --lookbook-color-emerald-300: hsl(156, 72%, 67%);
+  --lookbook-color-emerald-400: hsl(158, 64%, 52%);
+  --lookbook-color-emerald-500: hsl(160, 84%, 39%);
+  --lookbook-color-emerald-600: hsl(161, 94%, 30%);
+  --lookbook-color-emerald-700: hsl(163, 94%, 24%);
+  --lookbook-color-emerald-800: hsl(163, 88%, 20%);
+  --lookbook-color-emerald-900: hsl(164, 86%, 17%);
+  --lookbook-color-emerald-950: hsl(164, 88%, 9%);
+
+  --lookbook-color-teal-50: hsl(166, 77%, 97%);
+  --lookbook-color-teal-100: hsl(167, 86%, 89%);
+  --lookbook-color-teal-200: hsl(168, 84%, 78%);
+  --lookbook-color-teal-300: hsl(171, 77%, 64%);
+  --lookbook-color-teal-400: hsl(173, 66%, 50%);
+  --lookbook-color-teal-500: hsl(173, 80%, 40%);
+  --lookbook-color-teal-600: hsl(175, 84%, 32%);
+  --lookbook-color-teal-700: hsl(175, 77%, 26%);
+  --lookbook-color-teal-800: hsl(176, 69%, 22%);
+  --lookbook-color-teal-900: hsl(176, 61%, 19%);
+  --lookbook-color-teal-950: hsl(177, 59%, 11%);
+
+  --lookbook-color-cyan-50: hsl(183, 100%, 96%);
+  --lookbook-color-cyan-100: hsl(185, 96%, 90%);
+  --lookbook-color-cyan-200: hsl(186, 94%, 82%);
+  --lookbook-color-cyan-300: hsl(187, 92%, 69%);
+  --lookbook-color-cyan-400: hsl(188, 86%, 53%);
+  --lookbook-color-cyan-500: hsl(189, 95%, 43%);
+  --lookbook-color-cyan-600: hsl(192, 91%, 37%);
+  --lookbook-color-cyan-700: hsl(193, 82%, 31%);
+  --lookbook-color-cyan-800: hsl(194, 70%, 27%);
+  --lookbook-color-cyan-900: hsl(196, 64%, 24%);
+  --lookbook-color-cyan-950: hsl(197, 61%, 16%);
+
+  --lookbook-color-sky-50: hsl(204, 100%, 97%);
+  --lookbook-color-sky-100: hsl(204, 94%, 94%);
+  --lookbook-color-sky-200: hsl(201, 94%, 86%);
+  --lookbook-color-sky-300: hsl(199, 96%, 74%);
+  --lookbook-color-sky-400: hsl(198, 93%, 60%);
+  --lookbook-color-sky-500: hsl(199, 89%, 48%);
+  --lookbook-color-sky-600: hsl(200, 98%, 39%);
+  --lookbook-color-sky-700: hsl(201, 96%, 32%);
+  --lookbook-color-sky-800: hsl(201, 90%, 28%);
+  --lookbook-color-sky-900: hsl(202, 80%, 24%);
+  --lookbook-color-sky-950: hsl(202, 74%, 17%);
+
+  --lookbook-color-blue-50: hsl(214, 100%, 97%);
+  --lookbook-color-blue-100: hsl(214, 95%, 93%);
+  --lookbook-color-blue-200: hsl(213, 97%, 87%);
+  --lookbook-color-blue-300: hsl(212, 96%, 78%);
+  --lookbook-color-blue-400: hsl(213, 94%, 68%);
+  --lookbook-color-blue-500: hsl(217, 91%, 60%);
+  --lookbook-color-blue-600: hsl(221, 83%, 53%);
+  --lookbook-color-blue-700: hsl(224, 76%, 48%);
+  --lookbook-color-blue-800: hsl(226, 71%, 40%);
+  --lookbook-color-blue-900: hsl(224, 64%, 33%);
+  --lookbook-color-blue-950: hsl(226, 55%, 18%);
+
+  --lookbook-color-indigo-50: hsl(226, 100%, 97%);
+  --lookbook-color-indigo-100: hsl(227, 100%, 94%);
+  --lookbook-color-indigo-200: hsl(228, 97%, 89%);
+  --lookbook-color-indigo-300: hsl(230, 94%, 82%);
+  --lookbook-color-indigo-400: hsl(235, 90%, 74%);
+  --lookbook-color-indigo-500: hsl(239, 84%, 67%);
+  --lookbook-color-indigo-600: hsl(243, 75%, 59%);
+  --lookbook-color-indigo-700: hsl(245, 58%, 51%);
+  --lookbook-color-indigo-800: hsl(244, 55%, 41%);
+  --lookbook-color-indigo-900: hsl(242, 47%, 34%);
+  --lookbook-color-indigo-950: hsl(244, 44%, 23%);
+
+  --lookbook-color-violet-50: hsl(250, 100%, 98%);
+  --lookbook-color-violet-100: hsl(251, 91%, 96%);
+  --lookbook-color-violet-200: hsl(251, 95%, 92%);
+  --lookbook-color-violet-300: hsl(253, 95%, 85%);
+  --lookbook-color-violet-400: hsl(255, 92%, 76%);
+  --lookbook-color-violet-500: hsl(258, 90%, 66%);
+  --lookbook-color-violet-600: hsl(262, 83%, 58%);
+  --lookbook-color-violet-700: hsl(263, 70%, 50%);
+  --lookbook-color-violet-800: hsl(263, 69%, 42%);
+  --lookbook-color-violet-900: hsl(264, 67%, 35%);
+  --lookbook-color-violet-950: hsl(265, 62%, 21%);
+
+  --lookbook-color-purple-50: hsl(270, 100%, 98%);
+  --lookbook-color-purple-100: hsl(269, 100%, 96%);
+  --lookbook-color-purple-200: hsl(269, 100%, 92%);
+  --lookbook-color-purple-300: hsl(269, 97%, 85%);
+  --lookbook-color-purple-400: hsl(270, 95%, 75%);
+  --lookbook-color-purple-500: hsl(271, 91%, 65%);
+  --lookbook-color-purple-600: hsl(272, 81%, 56%);
+  --lookbook-color-purple-700: hsl(272, 72%, 47%);
+  --lookbook-color-purple-800: hsl(273, 67%, 39%);
+  --lookbook-color-purple-900: hsl(274, 66%, 32%);
+  --lookbook-color-purple-950: hsl(276, 60%, 17%);
+
+  --lookbook-color-fuchsia-50: hsl(289, 100%, 98%);
+  --lookbook-color-fuchsia-100: hsl(287, 100%, 96%);
+  --lookbook-color-fuchsia-200: hsl(288, 96%, 91%);
+  --lookbook-color-fuchsia-300: hsl(291, 93%, 83%);
+  --lookbook-color-fuchsia-400: hsl(292, 91%, 73%);
+  --lookbook-color-fuchsia-500: hsl(292, 84%, 61%);
+  --lookbook-color-fuchsia-600: hsl(293, 70%, 49%);
+  --lookbook-color-fuchsia-700: hsl(295, 72%, 40%);
+  --lookbook-color-fuchsia-800: hsl(295, 70%, 33%);
+  --lookbook-color-fuchsia-900: hsl(297, 64%, 28%);
+  --lookbook-color-fuchsia-950: hsl(297, 57%, 15%);
+
+  --lookbook-color-pink-50: hsl(327, 73%, 97%);
+  --lookbook-color-pink-100: hsl(326, 78%, 95%);
+  --lookbook-color-pink-200: hsl(326, 85%, 90%);
+  --lookbook-color-pink-300: hsl(327, 87%, 82%);
+  --lookbook-color-pink-400: hsl(329, 86%, 70%);
+  --lookbook-color-pink-500: hsl(330, 81%, 60%);
+  --lookbook-color-pink-600: hsl(333, 71%, 51%);
+  --lookbook-color-pink-700: hsl(335, 78%, 42%);
+  --lookbook-color-pink-800: hsl(336, 74%, 35%);
+  --lookbook-color-pink-900: hsl(336, 69%, 30%);
+  --lookbook-color-pink-950: hsl(336, 65%, 16%);
+
+  --lookbook-color-rose-50: hsl(356, 100%, 97%);
+  --lookbook-color-rose-100: hsl(356, 100%, 95%);
+  --lookbook-color-rose-200: hsl(353, 96%, 90%);
+  --lookbook-color-rose-300: hsl(353, 96%, 82%);
+  --lookbook-color-rose-400: hsl(351, 95%, 71%);
+  --lookbook-color-rose-500: hsl(350, 89%, 60%);
+  --lookbook-color-rose-600: hsl(347, 77%, 50%);
+  --lookbook-color-rose-700: hsl(345, 83%, 41%);
+  --lookbook-color-rose-800: hsl(343, 80%, 35%);
+  --lookbook-color-rose-900: hsl(342, 76%, 30%);
+  --lookbook-color-rose-950: hsl(341, 70%, 17%);
+}
+
+:root {
+  --lookbook-color-accent-50: var(--lookbook-color-indigo-50);
+  --lookbook-color-accent-100: var(--lookbook-color-indigo-100);
+  --lookbook-color-accent-200: var(--lookbook-color-indigo-200);
+  --lookbook-color-accent-300: var(--lookbook-color-indigo-300);
+  --lookbook-color-accent-400: var(--lookbook-color-indigo-400);
+  --lookbook-color-accent-500: var(--lookbook-color-indigo-500);
+  --lookbook-color-accent-600: var(--lookbook-color-indigo-600);
+  --lookbook-color-accent-700: var(--lookbook-color-indigo-700);
+  --lookbook-color-accent-800: var(--lookbook-color-indigo-800);
+  --lookbook-color-accent-900: var(--lookbook-color-indigo-900);
+  --lookbook-color-accent-950: var(--lookbook-color-indigo-950);
+
+  --lookbook-color-neutral-50: var(--lookbook-color-gray-50);
+  --lookbook-color-neutral-100: var(--lookbook-color-gray-100);
+  --lookbook-color-neutral-200: var(--lookbook-color-gray-200);
+  --lookbook-color-neutral-300: var(--lookbook-color-gray-300);
+  --lookbook-color-neutral-400: var(--lookbook-color-gray-400);
+  --lookbook-color-neutral-500: var(--lookbook-color-gray-500);
+  --lookbook-color-neutral-600: var(--lookbook-color-gray-600);
+  --lookbook-color-neutral-700: var(--lookbook-color-gray-700);
+  --lookbook-color-neutral-800: var(--lookbook-color-gray-800);
+  --lookbook-color-neutral-900: var(--lookbook-color-gray-900);
+  --lookbook-color-neutral-950: var(--lookbook-color-gray-950);
+
+  /* --lookbook-toolbar-height: 40px;
+  --lookbook-toolbar-icon-button-size: 18px;
+  --lookbook-toolbar-icon-button-color: var(--lookbook-color-neutral-400);
+
+  --lookbook-status-bar-height: 24px;
+
+  --lookbook-divider-color: var(--lookbook-color-neutral-300); */
+}
+
+:root {
   --sl-color-primary-50: rgb(249, 249, 254);
   --sl-color-primary-100: rgb(235, 235, 252);
   --sl-color-primary-200: rgb(219, 220, 249);
@@ -752,255 +1004,6 @@ video {
 
 [hidden] {
   display: none;
-}
-
-input[type="text"],
-input:where(:not([type])),
-input[type="email"],
-input[type="url"],
-input[type="password"],
-input[type="number"],
-input[type="date"],
-input[type="datetime-local"],
-input[type="month"],
-input[type="search"],
-input[type="tel"],
-input[type="time"],
-input[type="week"],
-input[multiple],
-textarea,
-select {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  background-color: #fff;
-  border-color: hsl(240, 5%, 84%);
-  border-color: var(--sl-color-neutral-300);
-  border-width: 1px;
-  border-radius: 0px;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-  padding-top: var(--sl-spacing-x-small);
-  padding-bottom: var(--sl-spacing-x-small);
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-  padding-left: var(--sl-spacing-small);
-  padding-right: var(--sl-spacing-small);
-  font-size: 1rem;
-  line-height: 1.2rem;
-  border-radius: 0.25rem;
-  border-radius: var(--sl-border-radius-medium);
-  width: 100%;
-}
-
-[type="text"]:focus,
-input:where(:not([type])):focus,
-[type="email"]:focus,
-[type="url"]:focus,
-[type="password"]:focus,
-[type="number"]:focus,
-[type="date"]:focus,
-[type="datetime-local"]:focus,
-[type="month"]:focus,
-[type="search"]:focus,
-[type="tel"]:focus,
-[type="time"]:focus,
-[type="week"]:focus,
-[multiple]:focus,
-textarea:focus,
-select:focus {
-  outline: 2px solid transparent;
-  outline-offset: 2px;
-  outline-color: rgb(179, 181, 243);
-  outline-color: var(--sl-color-primary-400);
-  /* border-color: var(--sl-color-primary-400); */
-}
-
-input::-moz-placeholder,
-textarea::-moz-placeholder {
-  color: hsl(240, 5%, 65%);
-  color: var(--sl-color-neutral-400);
-  opacity: 1;
-}
-
-input::-moz-placeholder, textarea::-moz-placeholder {
-  color: hsl(240, 5%, 65%);
-  color: var(--sl-color-neutral-400);
-  opacity: 1;
-}
-
-input::placeholder,
-textarea::placeholder {
-  color: hsl(240, 5%, 65%);
-  color: var(--sl-color-neutral-400);
-  opacity: 1;
-}
-
-::-webkit-datetime-edit-fields-wrapper {
-  padding: 0;
-}
-
-::-webkit-date-and-time-value {
-  min-height: 1.5em;
-  text-align: inherit;
-}
-
-::-webkit-datetime-edit {
-  display: inline-flex;
-}
-
-::-webkit-datetime-edit,
-::-webkit-datetime-edit-year-field,
-::-webkit-datetime-edit-month-field,
-::-webkit-datetime-edit-day-field,
-::-webkit-datetime-edit-hour-field,
-::-webkit-datetime-edit-minute-field,
-::-webkit-datetime-edit-second-field,
-::-webkit-datetime-edit-millisecond-field,
-::-webkit-datetime-edit-meridiem-field {
-  padding-top: 0;
-  padding-bottom: 0;
-}
-
-select {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 20 20'%3e%3cpath stroke='%236b7280' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='M6 8l4 4 4-4'/%3e%3c/svg%3e");
-  background-position: right 0.5rem center;
-  background-repeat: no-repeat;
-  background-size: 1.5em 1.5em;
-  padding-right: 2.5rem;
-  -webkit-print-color-adjust: exact;
-  print-color-adjust: exact;
-}
-
-[multiple],
-[size]:where(select:not([size="1"])) {
-  background-image: none;
-  background-image: initial;
-  background-position: 0 0;
-  background-position: initial;
-  background-repeat: repeat;
-  background-repeat: initial;
-  background-size: auto auto;
-  background-size: initial;
-  padding-right: 0.75rem;
-  -webkit-print-color-adjust: unset;
-  print-color-adjust: inherit;
-}
-
-[type="checkbox"],
-[type="radio"] {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  padding: 0;
-  -webkit-print-color-adjust: exact;
-  print-color-adjust: exact;
-  display: inline-block;
-  vertical-align: middle;
-  background-origin: border-box;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  user-select: none;
-  flex-shrink: 0;
-  height: 1.25rem;
-  width: 1.25rem;
-  color: rgb(87, 90, 228);
-  color: var(--sl-color-primary-700);
-  background-color: #fff;
-  border-color: rgb(179, 181, 243);
-  border-color: var(--sl-color-primary-400);
-  border-width: 1px;
-}
-
-[type="checkbox"] {
-  border-radius: 0px;
-}
-
-[type="radio"] {
-  border-radius: 100%;
-}
-
-[type="checkbox"]:focus,
-[type="radio"]:focus {
-  outline: 2px solid transparent;
-  outline-offset: 2px;
-  outline-color: rgb(149, 152, 238);
-  outline-color: var(--sl-color-primary-500);
-}
-
-[type="checkbox"]:checked,
-[type="radio"]:checked {
-  border-color: transparent;
-  background-color: currentColor;
-  background-size: 100% 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-}
-
-[type="checkbox"]:checked {
-  background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='white' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M12.207 4.793a1 1 0 010 1.414l-5 5a1 1 0 01-1.414 0l-2-2a1 1 0 011.414-1.414L6.5 9.086l4.293-4.293a1 1 0 011.414 0z'/%3e%3c/svg%3e");
-}
-
-@media (forced-colors: active) {
-  [type="checkbox"]:checked {
-    -webkit-appearance: auto;
-    -moz-appearance: auto;
-    appearance: auto;
-  }
-}
-
-[type="radio"]:checked {
-  background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='white' xmlns='http://www.w3.org/2000/svg'%3e%3ccircle cx='8' cy='8' r='3'/%3e%3c/svg%3e");
-}
-
-@media (forced-colors: active) {
-  [type="radio"]:checked {
-    -webkit-appearance: auto;
-    -moz-appearance: auto;
-    appearance: auto;
-  }
-}
-
-[type="checkbox"]:checked:hover,
-[type="checkbox"]:checked:focus,
-[type="radio"]:checked:hover,
-[type="radio"]:checked:focus {
-  border-color: transparent;
-  background-color: currentColor;
-}
-
-[type="checkbox"]:indeterminate {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 16 16'%3e%3cpath stroke='white' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M4 8h8'/%3e%3c/svg%3e");
-  border-color: transparent;
-  background-color: currentColor;
-  background-size: 100% 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-}
-
-@media (forced-colors: active) {
-  [type="checkbox"]:indeterminate {
-    -webkit-appearance: auto;
-    -moz-appearance: auto;
-    appearance: auto;
-  }
-}
-
-[type="checkbox"]:indeterminate:hover,
-[type="checkbox"]:indeterminate:focus {
-  border-color: transparent;
-  background-color: currentColor;
-}
-
-[type="file"] {
-  background: transparent none repeat 0 0 / auto auto padding-box border-box scroll;
-  background: initial;
-  border-color: inherit;
-  border-width: 0;
-  border-radius: 0;
-  padding: 0;
-  font-size: inherit;
-  line-height: inherit;
 }
 
 html,
